[project]
name = "faz-bot-app-discord"
# On the release branches, this string will be automatically updated by the bots
# Do not change this in the main branch!


version = "0.1.0"


description = "faz-bot Discord bot application"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [
    { name = "FAZuH", email = "fazuhhh@proton.me" }
]
dependencies = [
 "audioop-lts>=0.2.1",
 "dateparser>=1.2.0",
 "faz-bot-core>=0.3.0",
 "faz-utils>=0.1.2",
 "loguru>=0.7.2",
 "nextcord>=2.6.0",
 "pandas>=2.2.3",
 "requests>=2.32.3",
 "setuptools>=75.6.0",
 "sqlalchemy>=2.0.36",
 "tabulate>=0.9.0",
]

[project.scripts]
faz-discord = "faz.bot.app.discord.__main__:main"

[project.urls]
Source = "https://github.com/FAZuH/faz-bot-app-discord"
Issues = "https://github.com/FAZuH/faz-bot-app-discord/issues"
Documentation = "https://github.com/FAZuH/faz-bot-app-discord#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = [ 
    "faz.bot*",
]

# Common
[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "black>=24.10.0",
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "ruff>=0.7.4",
]
sandbox = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "neovim>=0.3.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.isort]
profile = "google"
line_length = 100

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E731"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
